# 2026-claude-code-workshop-assets

./: .gitignore  LICENSE  README.md
.claude/skills/archive-project/: SKILL.md
.claude/skills/landing-page-design/: SKILL.md
.claude/skills/scope-design/: SKILL.md
.claude/skills/study-plan/: SKILL.md
.claude/skills/verify-project/: SKILL.md
projects/01_bus-arrival-dashboard/: study-plan.md
samples/01_bus-arrival-dashboard/: idea.md  input.md  landing-page.md  scope.md  verification.md
samples/01_bus-arrival-dashboard/apps/a_static-site/: README.md  index.html
samples/01_bus-arrival-dashboard/apps/b_kyudai-bus-time-service-app/: README.md  package-lock.json  package.json
samples/01_bus-arrival-dashboard/apps/b_kyudai-bus-time-service-app/app/: page.tsx
samples/01_bus-arrival-dashboard/apps/b_kyudai-bus-time-service-app/app/api/travel-time/: route.ts
samples/01_bus-arrival-dashboard/apps/b_kyudai-bus-time-service-app/data/: kasyo40.csv
samples/01_bus-arrival-dashboard/apps/b_kyudai-bus-time-service-app/lib/: aggregate.ts  presets.ts
samples/01_bus-arrival-dashboard/prompts/: conversation-log.md
samples/01_bus-arrival-dashboard/report/: introduction.md
samples/02_rishu_simulator/: README.md  input.md  pyproject.toml  scope.md
samples/02_rishu_simulator/samples/: courses.csv  planB.csv
samples/02_rishu_simulator/src/jiji/: __init__.py  cli.py  conflict.py  loader.py  summary.py  timetable.py
